k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: python-k8s-app
  labels:
    name: python-k8s-app
    environment: production
